objects/zqu__ProductRatePlan__c.object
<CustomObject>
    <description>The Rate Plan associated with a ZProduct.</description>
    <fields>
        <fullName>OfferType__c</fullName>
        <label>OfferType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FreeTrial</fullName>
                </value>
                <value>
                    <fullName>HardOffer</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag for soft deletion</description>
        <inlineHelpText>Flag for soft deletion</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Description__c</fullName>
        <description>The Description of the Rate Plan.</description>
        <inlineHelpText>The Description of the Rate Plan.</inlineHelpText>
        <label>Description</label>
        <length>25535</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveEndDateTEXT__c</fullName>
        <formula>TEXT(YEAR( zqu__EffectiveEndDate__c ) ) &amp; &apos;-&apos; &amp; TEXT(MONTH(zqu__EffectiveEndDate__c)) &amp; &apos;-&apos; &amp; TEXT(DAY(zqu__EffectiveEndDate__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EffectiveEndDateTEXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveEndDate__c</fullName>
        <description>The Effective End Date of the Rate Plan.</description>
        <inlineHelpText>The Effective End Date of the Rate Plan.</inlineHelpText>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveStartDateTEXT__c</fullName>
        <formula>TEXT(YEAR( zqu__EffectiveStartDate__c ) ) &amp; &apos;-&apos; &amp; TEXT(MONTH(zqu__EffectiveStartDate__c)) &amp; &apos;-&apos; &amp; TEXT(DAY(zqu__EffectiveStartDate__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EffectiveStartDateTEXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveStartDate__c</fullName>
        <description>The Effective Start Date of the Rate Plan.</description>
        <inlineHelpText>The Effective Start Date of the Rate Plan.</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Price_Summary__c</fullName>
        <description>Field used in the QuickList component and populated at runtime to match the Quote&apos;s currency field.</description>
        <label>Price Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__ZProduct__c</fullName>
        <description>The ZProduct associated with this Rate Plan.</description>
        <inlineHelpText>The ZProduct associated with this Rate Plan.</inlineHelpText>
        <label>ZProduct</label>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>Product Rate Plan</relationshipLabel>
        <relationshipName>ProductRatePlan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Zuora Id (external primary key) of this Rate Plan.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Zuora Id (external primary key) of this Rate Plan.</inlineHelpText>
        <label>ZuoraId</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Rate Plan</label>
    <nameField>
        <label>Rate Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rate Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>